new website archive

--- a/index.html
+++ b/index.html
@@ -3,17 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meet Jain - AI/ML Engineer | Data Scientist | Full-Stack Developer</title>
-    <meta name="description" content="Meet Jain's portfolio - AI/ML Engineer, Data Scientist, and Full-Stack Developer with expertise in Python, machine learning, and web development. Currently pursuing B.Tech from TCET and BS from IIT Madras." />
+<title>Meet Jain | AI/ML Engineer & Full-Stack Developer</title>
+
+<meta name="description" content="Meet Jain - AI/ML Engineer, Data Scientist & Full-Stack Developer. Skilled in Python, React, and Machine Learning. Explore my portfolio and projects." />
+
     <meta name="author" content="Meet Jain" />
     <meta name="keywords" content="Meet Jain, AI, Machine Learning, Data Science, Full Stack Developer, Python, React, Portfolio" />
 
     <meta property="og:title" content="Meet Jain - AI/ML Engineer | Data Scientist | Portfolio" />
     <meta property="og:description" content="Explore Meet Jain's portfolio showcasing innovative AI/ML projects, data science solutions, and full-stack development expertise." />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="./preview.png" />
+<meta name="twitter:image" content="./preview.png" />
+
+<link rel="icon" type="image/x-icon" href="./favicon.ico" />
 
 
     <meta name="twitter:card" content="summary_large_image" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Meet Jain",
+  "url": "https://mj665.in",
+  "sameAs": [
+    "https://www.linkedin.com/in/mj2h/",
+    "https://github.com/mj665"
+  ],
+  "jobTitle": "AI/ML Engineer | Full-Stack Developer"
+}
+</script>
 
   </head>
 
